--- a/StoreFront/StoreFront.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/StoreFront/StoreFront.UI.MVC/Views/Shared/_Layout.cshtml
@@ -202,7 +202,7 @@ Copyright &copy;@DateTime.Now.Year All rights reserved.<br />This template is ma
 	<script src="~/js/jquery.magnific-popup.min.js"></script>
 	<script src="~/js/owl.carousel.min.js"></script>
 	<!--gmaps Js-->
-	<script src="~/https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
+	<script src="~/#"></script>
 	<script src="~/js/gmaps.min.js"></script>
 	<script src="~/js/main.js"></script>
 
