--- a/StoreFront/StoreFront.UI.MVC/Views/Home/Index.cshtml
+++ b/StoreFront/StoreFront.UI.MVC/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
 						</div>
 						<div class="col-lg-7">
 							<div class="banner-img">
-								<img class="img-fluid" src="img/banner/banner-img.png" alt="">
+								<img class="img-fluid" src="~/img/coca-cola 2 img.png" alt="Glass filled with Coca Cola">
 							</div>
 						</div>
 					</div>
