--- a/StoreFront/StoreFront.UI.MVC/Views/Products/Delete.cshtml
+++ b/StoreFront/StoreFront.UI.MVC/Views/Products/Delete.cshtml
@@ -25,7 +25,7 @@
 <div class="col-md-6 offset-md-3 col-sm-8 offset-sm-2 pb-4 pt-3 mb-4 justify-content-center">
     <h3 class="alert alert-danger text-center mt-5">Are you sure you want to delete @Model.ProductName?<br />This action <u class="alert-danger">CANNOT</u> be undone!</h3>
         <!--================Single Product Area =================-->
-        <div class="product_image_area">
+        <div class="product_image_area mb-5">
             <div class="container">
                 <div class="row s_product_inner">
                     <div class="col-lg-6">
