--- a/StoreFront/StoreFront.UI.MVC/Views/Products/Details.cshtml
+++ b/StoreFront/StoreFront.UI.MVC/Views/Products/Details.cshtml
@@ -9,7 +9,7 @@
 	<div class="container">
 		<div class="breadcrumb-banner d-flex flex-wrap align-items-center justify-content-end">
 			<div class="col-first">
-				<h1 class="">@Model.ProductName Details</h1>
+				<h1 class="">@Model.ProductName</h1>
 				<nav class="d-flex align-items-center">
 					@* <p><a asp-action="Create">Add New Product</a></p> *@
 					@* <a href="#">Shop<span class="lnr lnr-arrow-right"></span></a>
@@ -23,7 +23,7 @@
 
 
 <!--================Single Product Area =================-->
-<div class="product_image_area">
+<div class="product_image_area mb-5">
 	<div class="container">
 		<div class="row s_product_inner">
 			<div class="col-lg-6">
