--- a/StoreFront/StoreFront.UI.MVC/Views/Products/Index.cshtml
+++ b/StoreFront/StoreFront.UI.MVC/Views/Products/Index.cshtml
@@ -34,6 +34,9 @@
         <thead>
             <tr>
                 <th>
+                    @Html.DisplayNameFor(model => model.ProductImage)
+                </th>
+                <th>
                     @Html.DisplayNameFor(model => model.ProductName)
                 </th>
                 <th>
@@ -61,9 +64,6 @@
                     @Html.DisplayNameFor(model => model.UnitSizeFlOunce)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.ProductImage)
-                </th>
-                <th>
                     @Html.DisplayNameFor(model => model.Category)
                 </th>
                 <th>
@@ -78,6 +78,10 @@
         <tbody>
     @foreach (var item in Model) {
             <tr>
+                <td>
+                    @* @Html.DisplayFor(modelItem => item.ProductImage) *@
+                    <img src="~/img/t_@item.ProductImage" class="img-fluid" alt="@item.ProductName" />
+                </td>
                 <td>
                     <a asp-action="Details" asp-route-id="@item.ProductId">@Html.DisplayFor(modelItem => item.ProductName)</a>
                 </td>
@@ -104,9 +108,6 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.UnitSizeFlOunce)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ProductImage)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Category.CategoryName)
