--- a/StoreFront/StoreFront.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/StoreFront/StoreFront.UI.MVC/Views/Shared/_Layout.cshtml
@@ -88,7 +88,7 @@
 										<li class="nav-item"><a asp-action="ListUsers" asp-controller="Administration" class="nav-link">Users</a></li>
 										<li class="nav-item"><a asp-action="ListRoles" asp-controller="Administration" class="nav-link">Roles</a></li>
 										<li class="nav-item"><a asp-action="ListSuppliers" asp-controller="Administration" class="nav-link">Suppliers</a></li>
-										<li class="nav-item"><a asp-action="ListCategories" asp-controller="Administration" class="nav-link">Categories</a></li>
+										<li class="nav-item"><a asp-action="Index" asp-controller="Categories" class="nav-link">Categories</a></li>
 										@* <li class="nav-item"><a href="Identity/Account/Logout" class="nav-link">Logout</a></li>
 										<li class="nav-item"><a href="Identity/Account/Login" class="nav-link">Login</a></li> *@
 									</ul>
