--- a/StoreFront/StoreFront.UI.MVC/Views/Administration/EditRole.cshtml
+++ b/StoreFront/StoreFront.UI.MVC/Views/Administration/EditRole.cshtml
@@ -6,8 +6,8 @@
     ViewData["Title"] = "Edit Role";
 }
 
-<h1>Edit Role</h1>
-<form method="post" class="mt-3">
+<h1 class="text-center">Edit Role</h1>
+<form method="post" class="mt-3 col-md-10 offset-md-1">
     <div class="form-group row">
         <label asp-for="Id" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10">
