--- a/StoreFront/StoreFront.UI.MVC/Views/Administration/EditUser.cshtml
+++ b/StoreFront/StoreFront.UI.MVC/Views/Administration/EditUser.cshtml
@@ -6,9 +6,9 @@
     ViewData["Title"] = "Edit User";
 }
 
-<h1>Edit User</h1>
+<h1 class="text-center">Edit User</h1>
 
-<form method="post" class="mt-3">
+<form method="post" class="mt-3 col-md-10 offset-md-1">
     <div class="form-group row">
         <label asp-for="Id" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10">
