--- a/StoreFront/StoreFront.UI.MVC/Views/Administration/ListUsers.cshtml
+++ b/StoreFront/StoreFront.UI.MVC/Views/Administration/ListUsers.cshtml
@@ -7,38 +7,44 @@
 }
 
 
-<h1>All Users</h1>
-
-@if (Model.Any())
-{
+<h1 class="text-center">All Users</h1>
+<div class="text-center col-md-2 offset-md-5">
     <a asp-area="Identity" asp-page="/Account/Register" class="btn btn-primary mb-3" style="width:auto">
         Add new user
     </a>
+</div>
+
+@if (Model.Any())
+{
+    
+    
 
     foreach (var user in Model)
     {
-        <div class="card mb-3">
-            <div class="card-header">
-                User Id : @user.Id
-            </div>
-            <div class="card-body">
-                <h5 class="card-title">@user.UserName</h5>
-            </div>
-            <div class="card-footer">
+        <div class="col-md-10 offset-md-1">
+            <div class="card mb-3">
+                <div class="card-header">
+                    User Id : @user.Id
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">@user.UserName</h5>
+                </div>
+                <div class="card-footer">
                 
-                <form method="post" asp-action="DeleteUser" asp-route-id="@user.Id">
-                    <a asp-action="EditUser" asp-controller="Administration" asp-route-id="@user.Id" class="btn btn-primary">Edit</a>
+                    <form method="post" asp-action="DeleteUser" asp-route-id="@user.Id">
+                        <a asp-action="EditUser" asp-controller="Administration" asp-route-id="@user.Id" class="btn btn-primary">Edit</a>
 
-                    <span id="confirmDeleteSpan_@user.Id" style="display:none">
-                        <span>Are you sure you want to delete?</span>
-                        <button type="submit" class="btn btn-danger">Yes</button>
-                        <a href="#" class="btn btn-primary" onclick="confirmDelete('@user.Id', false)">No</a>
-                    </span>
+                        <span id="confirmDeleteSpan_@user.Id" style="display:none">
+                            <span>Are you sure you want to delete?</span>
+                            <button type="submit" class="btn btn-danger">Yes</button>
+                            <a href="#" class="btn btn-primary" onclick="confirmDelete('@user.Id', false)">No</a>
+                        </span>
 
-                    <span id="deleteSpan_@user.Id">
-                        <a href="#" class="btn btn-danger" onclick="confirmDelete('@user.Id', true)">Delete</a>
-                    </span>
-                </form>
+                        <span id="deleteSpan_@user.Id">
+                            <a href="#" class="btn btn-danger" onclick="confirmDelete('@user.Id', true)">Delete</a>
+                        </span>
+                    </form>
+                </div>
             </div>
         </div>
     }
