--- a/StoreFront/StoreFront.UI.MVC/Views/Products/Create.cshtml
+++ b/StoreFront/StoreFront.UI.MVC/Views/Products/Create.cshtml
@@ -1,33 +1,48 @@
 ﻿@model StoreFront.DATA.EF.Models.Product
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Product";
 }
 
-<h1>Create</h1>
+<!-- Start Banner Area -->
+<section class="banner-area organic-breadcrumb">
+    <div class="container">
+        <div class="breadcrumb-banner d-flex flex-wrap align-items-center justify-content-end">
+            <div class="col-first">
+                <h1 class="">Create Product</h1>
+                <nav class="d-flex align-items-center">
+                    @* <p><a asp-action="Create">Add New Product</a></p> *@
+                    @* <a href="#">Shop<span class="lnr lnr-arrow-right"></span></a>
+                    <a href="category.html">Fashon Category</a> *@
+                </nav>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- End Banner Area -->
 
-<h4>Product</h4>
-<hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
+    <div class="col-md-6 offset-md-3 col-sm-8 offset-sm-2 pb-4 pt-3 mb-4 justify-content-center">
+        <form asp-action="Create" enctype="multipart/form-data" class="contact_form">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="ProductName" class="control-label"></label>
                 <input asp-for="ProductName" class="form-control" />
                 <span asp-validation-for="ProductName" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="SupplierId" class="control-label"></label>
-                <select asp-for="SupplierId" class ="form-control" asp-items="ViewBag.SupplierId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="CategoryId" class="control-label"></label>
-                <select asp-for="CategoryId" class ="form-control" asp-items="ViewBag.CategoryId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProductStatusId" class="control-label"></label>
-                <select asp-for="ProductStatusId" class ="form-control" asp-items="ViewBag.ProductStatusId"></select>
+            <div class="row align-items-center">
+                <div class="form-group col-md-4">
+                    <label asp-for="SupplierId" class="control-label d-block"></label>
+                    <select asp-for="SupplierId" class ="form-control" asp-items="ViewBag.SupplierId"></select>
+                </div>
+                <div class="form-group col-md-4">
+                    <label asp-for="CategoryId" class="control-label d-block"></label>
+                    <select asp-for="CategoryId" class ="form-control" asp-items="ViewBag.CategoryId"></select>
+                </div>
+                <div class="form-group col-md-4">
+                    <label asp-for="ProductStatusId" class="control-label d-block"></label>
+                    <select asp-for="ProductStatusId" class ="form-control" asp-items="ViewBag.ProductStatusId"></select>
+                </div>
             </div>
             <div class="form-group">
                 <label asp-for="ProductDescription" class="control-label"></label>
@@ -71,12 +86,13 @@
             </div>
             <div class="form-group">
                 <label asp-for="ProductImage" class="control-label"></label>
-                <input asp-for="ProductImage" class="form-control" />
+                <input type="file" asp-for="Image" class="form-control" />
                 <span asp-validation-for="ProductImage" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group mt-3">
+                <input type="submit" style="font-size: 1em;" value="Create" class="genric-btn primary col-auto" />
             </div>
+            <a asp-action="Index" style="font-size: 1em;" class="genric-btn primary-border mt-2">Undo, changes and go back to list</a>
         </form>
     </div>
 </div>
