--- a/StoreFront/StoreFront.UI.MVC/Views/Products/TiledProducts.cshtml
+++ b/StoreFront/StoreFront.UI.MVC/Views/Products/TiledProducts.cshtml
@@ -22,6 +22,11 @@
 <!-- End Banner Area -->
 
 
+<p class="text-center">
+	<a asp-action="Create" style="font-size: 1em;" class="genric-btn primary mt-4 mr-2">Create New Product</a>
+	<a asp-action="Index" style="font-size: 1em;" class="genric-btn info mt-4 ml-2">Table View</a>
+</p>
+
 <div class="container">
 	<div class="row">
 		<div class="col-xl-3 col-lg-4 col-md-5">
