--- a/StoreFront/StoreFront.UI.MVC/Areas/Identity/Pages/Account/Register.cshtml
+++ b/StoreFront/StoreFront.UI.MVC/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,7 +4,66 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>@ViewData["Title"]</h1>
+
+<section class="banner-area organic-breadcrumb">
+    <div class="container">
+        <div class="breadcrumb-banner d-flex flex-wrap align-items-center justify-content-end">
+            <div class="col-first">
+                <h1>Register An Account</h1>
+                <nav class="d-flex align-items-center">
+                    @*<a href="index.html">Home<span class="lnr lnr-arrow-right"></span></a>
+                    <a href="category.html">Contact</a>*@
+                </nav>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!--================Login Box Area =================-->
+<section class="login_box_area section_gap">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="login_box_img">
+                    <img class="img-fluid" src="~/img/login.jpg" alt="Loging in on a computer">
+                    <div class="hover">
+                        <h4>Already Have An Account?</h4>
+                        <p>If this isn't' your first time and you already have an account then click below to go to the login page</p>
+                        <a class="primary-btn" href="~/Identity/Account/Register">Go To Login Page</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="login_form_inner">
+                    <h3>Register/Create A New Account</h3>
+                    <form asp-route-returnUrl="@Model.ReturnUrl" class="row login_form" method="post" id="registerForm">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <div class="col-md-12 form-group">
+                            <input asp-for="Input.Email" class="form-control" autocomplete="username" id="name" placeholder="Email" aria-required="true">
+                            <span asp-validation-for="Input.Email" class="text-danger"></span>
+                        </div>
+                        <div class="col-md-12 form-group">
+                            <input asp-for="Input.Password" class="form-control" placeholder="Password" autocomplete="new-password" aria-required="true">
+                            <span asp-validation-for="Input.Password" class="text-danger"></span>
+                        </div>
+                        <div class="col-md-12 form-group">
+                            <input asp-for="Input.ConfirmPassword" class="form-control" placeholder="Confirm Password" autocomplete="new-password" aria-required="true">
+                            <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                        </div>
+                        <div class="col-md-12 form-group">
+                            @* <button type="submit" value="submit" class="primary-btn">Log In</button> *@
+                            <button id="registerSubmit" type="submit" value="submit" class="w-100 primary-btn">Register New Account</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--================End Login Box Area =================-->
+
+
+@* <h1>@ViewData["Title"]</h1>
 
 <div class="row">
     <div class="col-md-4">
@@ -60,7 +119,7 @@
             }
         </section>
     </div>
-</div>
+</div> *@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
