--- a/StoreFront/StoreFront.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/StoreFront/StoreFront.UI.MVC/Views/Shared/_Layout.cshtml
@@ -132,8 +132,8 @@
 									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
 									   aria-expanded="false">Register/Login</a>
 									<ul class="dropdown-menu">
-										<li class="nav-item"><a href="Identity/Account/Register" class="nav-link">Register</a></li>
-										<li class="nav-item"><a href="Identity/Account/Login" class="nav-link">Login</a></li>
+										<li class="nav-item"><a href="~/Identity/Account/Register" class="nav-link">Register</a></li>
+										<li class="nav-item"><a href="~/Identity/Account/Login" class="nav-link">Login</a></li>
 										@*<li class="nav-item"><a asp-action="Index" asp-controller="Products" class="nav-link">All Products</a></li>
 										<li class="nav-item"><a asp-action="ListCategories" asp-controller="Administration" class="nav-link">Categories</a></li>
 										<li class="nav-item"><a href="Identity/Account/Logout" class="nav-link">Logout</a></li>
