--- a/StoreFront/StoreFront.UI.MVC/Views/Products/TiledProducts.cshtml
+++ b/StoreFront/StoreFront.UI.MVC/Views/Products/TiledProducts.cshtml
@@ -38,7 +38,7 @@
 							<span class="lnr lnr-arrow-right"></span>Fruits and Vegetables<span class="number">(53)</span>
 						</a>
 						<ul class="collapse" id="fruitsVegetable" data-toggle="collapse" aria-expanded="false" aria-controls="fruitsVegetable">
-							<li class="main-nav-list child"><a href="#">Frozen Fish<span class="number">(13)</span></a></li>
+							<li class="main-nav-list"><a href="#">Frozen Fish<span class="number">(13)</span></a></li>
 							<li class="main-nav-list child"><a href="#">Dried Fish<span class="number">(09)</span></a></li>
 							<li class="main-nav-list child"><a href="#">Fresh Fish<span class="number">(17)</span></a></li>
 							<li class="main-nav-list child"><a href="#">Meat Alternatives<span class="number">(01)</span></a></li>
@@ -211,10 +211,10 @@
 		</div>
 		<div class="col-xl-9 col-lg-8 col-md-7">
 			<!-- Start Filter Bar -->
-			<div class="filter-bar d-flex flex-wrap align-items-center">
+			@* <div class="filter-bar d-flex flex-wrap align-items-center">
 				<div class="sorting">
-					<select>
-						<option value="1">Default sorting</option>
+					<select name="categoryId" asp-items="ViewBag.CategoryId">
+						<option value="0">[Choose a Category]</option>
 						<option value="2">Sort by Price ($ -> $$$)</option>
 						<option value="3">Sort by Price ($$$ -> $)</option>
 					</select>
@@ -235,7 +235,7 @@
 					<a href="#">6</a>
 					<a href="#" class="next-arrow"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
 				</div>
-			</div>
+			</div> *@
 			<!-- End Filter Bar -->
 			<!-- Start Best Seller -->
 			<section class="lattest-product-area pb-40 category-list">
@@ -244,7 +244,7 @@
 					{
 					<!-- single product -->
 					<div class="col-lg-4 col-md-6">
-						<div class="single-product">
+							<a asp-action="Details" asp-route-id="@item.ProductId" class="product-click-link"><div class="single-product">
 							<img class="img-fluid" src="~/img/@item.ProductImage" alt="@item.ProductName">
 							<div class="product-details">
 								<h6>
@@ -254,7 +254,7 @@
 										<h6>@Html.DisplayFor(modelItem => item.UnitPrice)</h6>
 									@* <h6 class="l-through">$210.00</h6> *@
 								</div>
-								<div class="prd-bottom">
+								@* <div class="prd-bottom">
 
 									<a href="" class="social-info">
 										<span class="ti-bag"></span>
@@ -272,9 +272,10 @@
 										<span class="lnr lnr-move"></span>
 										<p class="hover-text">view more</p>
 									</a>
-								</div>
+								</div> *@
 							</div>
 						</div>
+						</a>
 					</div>
 					}
 				</div>
