--- a/StoreFront/StoreFront.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/StoreFront/StoreFront.UI.MVC/Views/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
 								 aria-expanded="false">Shop</a>
 								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="~/Products">Shop All</a></li>
+									<li class="nav-item"><a class="nav-link" href="~/Products/TiledProducts">Shop All</a></li>
 									<li class="nav-item"><a class="nav-link" href="single-product.html">Shop Soda</a></li>
 									<li class="nav-item"><a class="nav-link" href="checkout.html">Shop Milk</a></li>
 									<li class="nav-item"><a class="nav-link" href="cart.html">Shop Water</a></li>
